[package]
name = "anchor-escrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = "1.0.0"

[dev-dependencies]
litesvm = "0.10.0"
litesvm-token = "0.10.0"
solana-message = "3.1.0"
solana-transaction = "3.1.0"
solana-signer = "3.0.0"
solana-keypair = "3.1.2"
solana-pubkey = "4.2.0"
solana-account = "3.4.0"
solana-rpc-client = "3.1.14"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }
